--- a/css/bootstrap4-neon-glow.css
+++ b/css/bootstrap4-neon-glow.css
@@ -22,7 +22,7 @@
   --gray-dark: #11111d;
   --primary: #714cdf;
   --secondary: #16a4de;
-  --success: #17b06b;
+  --success: #9aed51;
   --info: #2983fe;
   --warning: #f97515;
   --danger: #ff3c5c;
@@ -1917,7 +1917,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #17b06b; }
+  color: #9aed51; }
 
 .valid-tooltip {
   position: absolute;
@@ -1934,7 +1934,7 @@ textarea.form-control {
   border-radius: 6px; }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #17b06b;
+  border-color: #9aed51;
   padding-right: calc(1.5em + 0.75rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2317b06b' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -1942,7 +1942,7 @@ textarea.form-control {
   -webkit-background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
           background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
   .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-    border-color: #17b06b;
+    border-color: #9aed51;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25);
             box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25); }
   .was-validated .form-control:valid ~ .valid-feedback,
@@ -1955,11 +1955,11 @@ textarea.form-control {
   background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem); }
 
 .was-validated .custom-select:valid, .custom-select.is-valid {
-  border-color: #17b06b;
+  border-color: #9aed51;
   padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
   background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%2311111d' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2317b06b' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #32334a no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
   .was-validated .custom-select:valid:focus, .custom-select.is-valid:focus {
-    border-color: #17b06b;
+    border-color: #9aed51;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25);
             box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25); }
   .was-validated .custom-select:valid ~ .valid-feedback,
@@ -1973,7 +1973,7 @@ textarea.form-control {
   display: block; }
 
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #17b06b; }
+  color: #9aed51; }
 
 .was-validated .form-check-input:valid ~ .valid-feedback,
 .was-validated .form-check-input:valid ~ .valid-tooltip, .form-check-input.is-valid ~ .valid-feedback,
@@ -1981,9 +1981,9 @@ textarea.form-control {
   display: block; }
 
 .was-validated .custom-control-input:valid ~ .custom-control-label, .custom-control-input.is-valid ~ .custom-control-label {
-  color: #17b06b; }
+  color: #9aed51; }
   .was-validated .custom-control-input:valid ~ .custom-control-label::before, .custom-control-input.is-valid ~ .custom-control-label::before {
-    border-color: #17b06b; }
+    border-color: #9aed51; }
 
 .was-validated .custom-control-input:valid ~ .valid-feedback,
 .was-validated .custom-control-input:valid ~ .valid-tooltip, .custom-control-input.is-valid ~ .valid-feedback,
@@ -1999,10 +1999,10 @@ textarea.form-control {
           box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25); }
 
 .was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-valid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #17b06b; }
+  border-color: #9aed51; }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
-  border-color: #17b06b; }
+  border-color: #9aed51; }
 
 .was-validated .custom-file-input:valid ~ .valid-feedback,
 .was-validated .custom-file-input:valid ~ .valid-tooltip, .custom-file-input.is-valid ~ .valid-feedback,
@@ -2010,7 +2010,7 @@ textarea.form-control {
   display: block; }
 
 .was-validated .custom-file-input:valid:focus ~ .custom-file-label, .custom-file-input.is-valid:focus ~ .custom-file-label {
-  border-color: #17b06b;
+  border-color: #9aed51;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25);
           box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.25); }
 
@@ -2302,8 +2302,8 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #17b06b;
-  border-color: #17b06b; }
+  background-color: #9aed51;
+  border-color: #9aed51; }
   .btn-success:hover {
     color: #fff;
     background-color: #138e56;
@@ -2313,8 +2313,8 @@ fieldset:disabled a.btn {
             box-shadow: 0 0 0 0.2rem rgba(58, 188, 129, 0.5); }
   .btn-success.disabled, .btn-success:disabled {
     color: #fff;
-    background-color: #17b06b;
-    border-color: #17b06b; }
+    background-color: #9aed51;
+    border-color: #9aed51; }
   .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
   .show > .btn-success.dropdown-toggle {
     color: #fff;
@@ -2497,23 +2497,23 @@ fieldset:disabled a.btn {
               box-shadow: 0 0 0 0.2rem rgba(22, 164, 222, 0.5); }
 
 .btn-outline-success {
-  color: #17b06b;
-  border-color: #17b06b; }
+  color: #9aed51;
+  border-color: #9aed51; }
   .btn-outline-success:hover {
     color: #fff;
-    background-color: #17b06b;
-    border-color: #17b06b; }
+    background-color: #9aed51;
+    border-color: #9aed51; }
   .btn-outline-success:focus, .btn-outline-success.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.5);
             box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.5); }
   .btn-outline-success.disabled, .btn-outline-success:disabled {
-    color: #17b06b;
+    color: #9aed51;
     background-color: transparent; }
   .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
   .show > .btn-outline-success.dropdown-toggle {
     color: #fff;
-    background-color: #17b06b;
-    border-color: #17b06b; }
+    background-color: #9aed51;
+    border-color: #9aed51; }
     .btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-success.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 176, 107, 0.5);
@@ -4400,7 +4400,7 @@ input[type="button"].btn-block {
 
 .badge-success {
   color: #fff;
-  background-color: #17b06b; }
+  background-color: #9aed51; }
   a.badge-success:hover, a.badge-success:focus {
     color: #fff;
     background-color: #118350; }
@@ -5692,7 +5692,7 @@ button.bg-secondary:focus {
   background-color: #1182b0 !important; }
 
 .bg-success {
-  background-color: #17b06b !important; }
+  background-color: #9aed51 !important; }
 
 a.bg-success:hover, a.bg-success:focus,
 button.bg-success:hover,
@@ -5782,7 +5782,7 @@ button.bg-dark:focus {
   border-color: #16a4de !important; }
 
 .border-success {
-  border-color: #17b06b !important; }
+  border-color: #9aed51 !important; }
 
 .border-info {
   border-color: #2983fe !important; }
@@ -8496,7 +8496,7 @@ a.text-secondary:hover, a.text-secondary:focus {
   color: #0f7198 !important; }
 
 .text-success {
-  color: #17b06b !important; }
+  color: #9aed51 !important; }
 
 a.text-success:hover, a.text-success:focus {
   color: #0e6c42 !important; }
@@ -8632,7 +8632,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: #16a4de !important; }
 
 .btn-hover-text-success:hover, .btn-hover-text-success:active {
-  color: #17b06b !important; }
+  color: #9aed51 !important; }
 
 .btn-hover-text-info:hover, .btn-hover-text-info:active {
   color: #2983fe !important; }
@@ -8894,7 +8894,7 @@ body {
   .btn-shadow.btn-secondary:hover, .btn-shadow.btn-outline-secondary:hover {
     background-color: #16a4de; }
   .btn-shadow.btn-success:hover, .btn-shadow.btn-outline-success:hover {
-    background-color: #17b06b; }
+    background-color: #9aed51; }
   .btn-shadow.btn-info:hover, .btn-shadow.btn-outline-info:hover {
     background-color: #2983fe; }
   .btn-shadow.btn-warning:hover, .btn-shadow.btn-outline-warning:hover {
