--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 :root {
     --color-text: #fff;
     --color-bg: #000;
@@ -22,11 +25,6 @@
     --blend-color-3: transparent;
     --blend-color-4: transparent;
     --blend-color-5: #af4949;
-}
-
-@font-face {
-    font-family: "PhelixBoomgartner";
-    src: url("../fonts/PhelixBoomgartner.otf") format("opentype")
 }
 
 @font-face {
@@ -132,6 +130,10 @@ body {
     font-family: Hack, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.color_green{
+    color: #9aed51;
+}
+
 .color_danger {
     color: #ef121b;
 }
@@ -146,7 +148,8 @@ body {
 
 h1,
 h2 {
-    font-family: 'PhelixBoomgartner'!important;
+    /* font-family: 'JetBrains Mono' !important; */
+    font-family: 'VT323', monospace !important;
 }
 
 button.typewriter {
