--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,7 @@ input[type="radio"].toggle:checked + label {
     left: calc(-1 * var(--gap-horizontal));
     width: calc(100% + var(--gap-horizontal) * 2);
     height: calc(100% + var(--gap-vertical) * 2);
-    background: url(../images/bg.png);
+    background: url(../images/Untitled.png);
     transform: translate3d(0, 0, 0);
     background-blend-mode: var(--blend-mode-1);
     background-position: right;
@@ -675,8 +675,8 @@ input[type="radio"].toggle:checked + label {
 }
 
 #preloader {
-    background: black;
-    color: #ddd;
+    background: transparent;
+    color: #9aed51;
     padding: 5px;
     box-sizing: border-box;
 }
