--- a/css/main.css
+++ b/css/main.css
@@ -718,3 +718,16 @@ span.fail:after {
 .card{
     background-color: #000000BF;
 }
+
+.card-delete{
+    position: absolute;
+    top: -18px;
+    right: -17px;
+    border-radius: 50%;
+    display: none;
+}
+
+.toast-header{
+    background-color: #ff163c;
+    color: #fff;
+}
